# geedim

./: .readthedocs.yaml  .style.yapf  README.md  README.rst  meta.yaml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: install-test-conda-forge.yml  install-test-pypi.yml  install-test-testpypi.yml  publish-pypi.yml  publish-test.yml  publish-testpypi.yml  publish.yml  python-package.yml  run-download-integration-tests.yml  run-geemap-download-tests.yml  run-integration-tests.yml  run-py3-10-tests.yml  run-tests.yml  run-unit-tests.yml  test.yml
data/inputs/: collection_info.json  satellite_info.json
data/inputs/test/: region.geojson
data/inputs/tests/: const_image_25ha.tif  region_10000ha.geojson
docs/: api.rst  changelog.rst  cli.rst  cloud_coll_gh.rst  cloud_coll_rtd.rst  cloud_support.csv  conf.py  contributing.rst  description.rst  index.rst  installation.rst  readme_sections.rst  requirements.txt  tutorials.rst
docs/_static/: custom.css  jupyter-sphinx.css
docs/examples/: api_getting_started.py  l7_composite.ipynb  s2_composite.ipynb
docs/getting_started/: api.py  api.rst  cli.rst  index.rst
docs/reference/: api.rst  cli.rst  index.rst
geedim/: __init__.py  cli.py  collection.py  composite.py  download.py  enums.py  errors.py  export.py  image.py  info.py  mask.py  masked_image.py  medoid.py  runners.py  schema.py  search.py  stac.py  tile.py  utils.py
geedim/data/: ee_stac_urls.json
scripts/: __init__.py  gee_dim.py
tests/: __init__.py  conftest.py  integration.py  test_api.py  test_cli.py  test_collection.py  test_download.py  test_geedim.py  test_image.py  test_mask.py  test_stac.py  test_tile.py  test_utils.py  util.py
tests/data/: region.geojson  region_10000ha.geojson  region_100ha.geojson  region_25ha.geojson
