[project]
name = 'geedim'
description = 'Export and cloud mask Google Earth Engine imagery.'
readme = 'README.rst'
requires-python = '>=3.11'
dependencies = [
    'numpy>=1.19',
    'rasterio>=1.3.8',
    'click>=8',
    'tqdm>=4.6',
    'earthengine-api>=0.1.379',
    'tabulate>=0.9',
    'fsspec>=2025.2',
    'aiohttp>=3.11',
]
authors = [{name = 'Leftfield Geospatial'}]
keywords = [
    'earth engine', 'image', 'export', 'geotiff', 'xarray', 'numpy', 'cloud', 'mask'
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
dynamic = ['version']

[project.scripts]
geedim = 'geedim.cli:cli'

[project.optional-dependencies]
xarray = ['xarray']

[dependency-groups]
tests = ['pytest', 'pytest-xdist', 'pytest-cov', 'xarray']
docs = [
    'sphinx', 'furo', 'sphinx-click', 'sphinx-copybutton', 'jupyter-sphinx', 'xarray'
]

[project.urls]
Homepage = 'https://github.com/leftfield-geospatial/geedim'
Documentation = "https://geedim.readthedocs.org"
Source = 'https://github.com/leftfield-geospatial/geedim'
Changelog = 'https://github.com/leftfield-geospatial/geedim/releases'
Issues = 'https://github.com/leftfield-geospatial/geedim/issues'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['geedim']

[tool.setuptools.dynamic]
version = {attr = 'geedim.version.__version__'}

[tool.setuptools.package-data]
geedim = ['py.typed']

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.ruff]
line-length = 88
format = { quote-style = 'single' }

[tool.ruff.lint]
select = [
    'B',  # flake8-bugbear
    'E',  # pycodestyle error
    'F',  # pyflakes
    'I',  # isort
    'UP',  # pyupgrade
    'W',  # pycodestyle warning
    'RUF'
]
